FullQa New/src/objects/CampaignMember.object
<CustomObject>
    <fields>
        <fullName>AVA__AVAAI_action_required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This Campaign Member requires some action be taken by a rep</description>
        <label>Conversica Action Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_action_required_date__c</fullName>
        <description>This Campaign Member requires some action be taken by a rep</description>
        <label>Conversica Action Required Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_confirmed_phone_1__c</fullName>
        <description>This Campaign Member&apos;s phone number as verified or discovered by Conversica</description>
        <label>Conversica Confirmed Phone 1</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_confirmed_phone_2__c</fullName>
        <description>This Campaign Member&apos;s phone number as verified or discovered by Conversica</description>
        <label>Conversica Confirmed Phone 2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_conversation_stage__c</fullName>
        <description>The current stage of the Conversica Conversation</description>
        <label>Conversation Stage</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_conversation_stage_date__c</fullName>
        <description>The date and time the current Conversation Stage changed</description>
        <label>Conversation Stage Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_conversation_status__c</fullName>
        <description>The current status of the Conversica Conversation</description>
        <label>Conversation Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_conversation_status_date__c</fullName>
        <description>The date and time the current Conversation Status was set</description>
        <label>Conversation Status Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_conversation_status_detail__c</fullName>
        <label>Deprecated Conversation Status Detail</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_conversation_status_detail_date__c</fullName>
        <label>Deprecated Status Detail Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_conversica_lead_status__c</fullName>
        <description>The current status of the Campaign Member in Conversica</description>
        <label>Conversica Lead Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_conversica_lead_status_date__c</fullName>
        <description>The date and time the current Conversation status was set</description>
        <label>Conversica Lead Status Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_date_added__c</fullName>
        <description>The date and time Conversica received this Campaign Member</description>
        <label>Conversica Date Added</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_discovered_email_1__c</fullName>
        <description>If a new email address is discovered in a Campaign Member&apos;s response, this field will be populated with the additional email address.</description>
        <inlineHelpText>If a new email address is discovered in a Campaign Member&apos;s response, this field will be populated with the additional email address.</inlineHelpText>
        <label>Conversica Discovered Email 1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_discovered_email_2__c</fullName>
        <description>If a second new email address is discovered in a Campaign Member’s response, this field will be populated with the additional email address</description>
        <inlineHelpText>If a second new email address is discovered in a Campaign Member’s response, this field will be populated with the additional email address</inlineHelpText>
        <label>Conversica Discovered Email 2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_discovered_name__c</fullName>
        <description>If a new first name is discovered in a Campaign Member’s response, this field will be populated with the preferred first name.</description>
        <inlineHelpText>If a new first name is discovered in a Campaign Member’s response, this field will be populated with the preferred first name.</inlineHelpText>
        <label>Conversica Discovered Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_first_message_date__c</fullName>
        <description>The date and time Conversica first sent a message to the Campaign Member</description>
        <label>Conversica First Message Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_further_action__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if the Campaign Member is determined by your Conversica Assistant to have further questions or that they are waiting on actions from their assigned contact.</description>
        <inlineHelpText>Checked if the Campaign Member is determined by your Conversica Assistant to have further questions or that they are waiting on actions from their assigned contact.</inlineHelpText>
        <label>Conversica Further Action</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_further_action_date__c</fullName>
        <description>Date and time the Campaign Member became a Conversica Further Action lead.</description>
        <inlineHelpText>Date and time the Campaign Member became a Conversica Further Action lead.</inlineHelpText>
        <label>Conversica Further Action Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_hot_lead__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The Campaign Member is ready to be contacted by a rep</description>
        <label>Conversica Hot Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_hot_lead_date__c</fullName>
        <description>The date and time the Campaign Member became &quot;Hot&quot; in Conversica</description>
        <label>Conversica Hot Lead Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_last_message_date__c</fullName>
        <description>The date and time Conversica last sent a message to the Campaign Member</description>
        <label>Conversica Last Message Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_last_response_date__c</fullName>
        <description>The date and time Conversica last received a response from the Campaign Member</description>
        <label>Conversica Last Response Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_lead_at_risk__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The Campaign Member may lose interest if not contacted soon by a rep</description>
        <label>Conversica Lead At Risk</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_lead_at_risk_date__c</fullName>
        <description>The date and time the Campaign Member became &quot;At Risk&quot; in Conversica</description>
        <label>Conversica Lead At Risk Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_lead_profile__c</fullName>
        <description>A link to the Conversica Lead Profile page for the selected Campaign Member.</description>
        <inlineHelpText>A link to the Conversica Lead Profile page for the selected Campaign Member.</inlineHelpText>
        <label>Conversica Lead Profile</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_options__c</fullName>
        <description>Options field for this object in Conversica</description>
        <label>Conversica Options</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Stop</fullName>
                </value>
                <value>
                    <fullName>Skip to follow-up</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_score__c</fullName>
        <description>The Conversica Score of an Conversica lead.</description>
        <label>Deprecated Conversica Score</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Grey</fullName>
                </value>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Black</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_sms_opt_out__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if the Campaign Member indicates they would no longer like to be messaged via SMS after having previously opted in.</description>
        <inlineHelpText>Checked if the Campaign Member indicates they would no longer like to be messaged via SMS after having previously opted in.</inlineHelpText>
        <label>Conversica SMS Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AVA__AVAAI_status__c</fullName>
        <description>Status of an Conversica lead in the Conversica system</description>
        <label>Deprecated Conversica Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Queue</fullName>
                </value>
                <value>
                    <fullName>Duplicate</fullName>
                </value>
                <value>
                    <fullName>Excluded</fullName>
                </value>
                <value>
                    <fullName>Undeliverable</fullName>
                </value>
                <value>
                    <fullName>AVA Stopped</fullName>
                </value>
                <value>
                    <fullName>Client Stopped</fullName>
                </value>
                <value>
                    <fullName>Messaging</fullName>
                </value>
                <value>
                    <fullName>No Response</fullName>
                </value>
                <value>
                    <fullName>Awaiting Response</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Conversica Stopped</fullName>
                </value>
                <value>
                    <fullName>Preparing Lead</fullName>
                </value>
                <value>
                    <fullName>Sent Engagement</fullName>
                </value>
                <value>
                    <fullName>Sent Appt.</fullName>
                </value>
                <value>
                    <fullName>Sent Feedback</fullName>
                </value>
                <value>
                    <fullName>Sent Social</fullName>
                </value>
                <value>
                    <fullName>Received Engagement</fullName>
                </value>
                <value>
                    <fullName>Received Appt.</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Received Social</fullName>
                </value>
                <value>
                    <fullName>Messaging Complete</fullName>
                </value>
                <value>
                    <fullName>Unsubscribed</fullName>
                </value>
                <value>
                    <fullName>Opt Out</fullName>
                </value>
                <value>
                    <fullName>Rep Stopped</fullName>
                </value>
                <value>
                    <fullName>CRM Stopped</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Opp_Name_Concat__c</fullName>
        <formula>LEFT( Contact.Account.Name &amp; &quot; &quot; &amp;  Campaign.Auto_Opp_Name__c , 80)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account/Opp Name Concat</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ActivePartnerAccount__c</fullName>
        <description>https://jira.avalara.com/browse/IBST-8125</description>
        <formula>Contact.Account.ActivePartner__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active Partner Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CAMLeadCreated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CAM Lead Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CAMLeadName__c</fullName>
        <formula>IF(LEN(Campaign.Auto_Opp_Name__c  &amp; &quot; - &quot; &amp;  Contact.Account.Name &amp; &quot; - &quot; &amp;  Contact.FirstName &amp; &quot; &quot; &amp; Contact.LastName)&gt;80,

LEFT( Campaign.Auto_Opp_Name__c  &amp; &quot; - &quot; &amp;  Contact.Account.Name &amp; &quot; - &quot; &amp;  Contact.FirstName &amp; &quot; &quot; &amp; Contact.LastName,80),

Campaign.Auto_Opp_Name__c  &amp; &quot; - &quot; &amp;  Contact.Account.Name &amp; &quot; - &quot; &amp;  Contact.FirstName &amp; &quot; &quot; &amp; Contact.LastName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CAM Lead Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CAMLeadSource3__c</fullName>
        <label>CAM Lead Source3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CAMLeadSource__c</fullName>
        <formula>TEXT( Campaign.Auto_OppSubType__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CAM Lead Source</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CAMLeadType__c</fullName>
        <label>CAM Lead Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A Lead</fullName>
                </value>
                <value>
                    <fullName>B Lead</fullName>
                </value>
                <value>
                    <fullName>C Lead</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Campaign_Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Used to stamp the campaign asset directly to the campaign membership at the point of record creation for reporting because the Asset field on the Lead or contact could be over written. 
Susan Norgaard</inlineHelpText>
        <label>Campaign Asset</label>
        <referenceTo>Campaign_Asset__c</referenceTo>
        <relationshipLabel>Campaign Members</relationshipLabel>
        <relationshipName>Campaign_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CaseSafe_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign Member CaseSafeID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Full_Name__c</fullName>
        <description>For Reporting as the campaign member reports only allow for First and Last name fields rather than the full name.
Integrated: No
Partner Program: Liz Anderson (needed for display on Dashboard)</description>
        <formula>Contact.FirstName + &quot; &quot; +  Contact.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Status__c</fullName>
        <formula>TEXT( Contact.ContactStatus__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerAudience__c</fullName>
        <label>Customer Audience</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initial_Contact_Status__c</fullName>
        <description>https://jira.avalara.com/browse/ITBSE-879
Populated with a workflow</description>
        <inlineHelpText>This field shows the contact status when campaign member is created.</inlineHelpText>
        <label>Initial Contact Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initial_Lead_Status__c</fullName>
        <description>https://jira.avalara.com/browse/ITBSE-879
This is populated with a workflow</description>
        <inlineHelpText>This field capture initial status when campaign member is created.</inlineHelpText>
        <label>Initial Lead Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initial_Response_Date__c</fullName>
        <description>Field created to record data and time of initial response.</description>
        <label>Initial Response Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>IsIRDUpdatedByTrigger__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This Field is to avoid workflow : https://avalara.my.salesforce.com/01Q33000000NEWh. to override initial response date</description>
        <label>IsIRDUpdatedByTrigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsMQL__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsMQL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsWorking__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsWorking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Initial_MQL__c</fullName>
        <description>https://jira.avalara.com/browse/ITBSE-879</description>
        <formula>OR(Initial_Contact_Status__c =&quot;MQL&quot;, Initial_Lead_Status__c=&quot;MQL&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Initial MQL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_Created_Date__c</fullName>
        <description>The actual date that the Lead Record was created. Used to compare the date that the lead was first associated to the campaign. This would be considered a net new lead if they are the same.
Integrated: No
Change level 2  - used for campaign analysis on net new leads
Marketing: Jessica, Liz, Susan</description>
        <formula>DateValue(Lead.CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_Industry__c</fullName>
        <formula>TEXT(Lead.Industry)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Industry</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Opportunity_Type__c</fullName>
        <label>Lead Opportunity Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Status__c</fullName>
        <formula>TEXT( Lead.Status )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Type_Formula__c</fullName>
        <description>Compares the Lead Opportunity Type and reports when a Partner or New</description>
        <formula>CASE( Lead.Opportunity_Type__c ,&quot;Partner&quot;, &quot;Partner&quot;, &quot;New&quot;,&quot;New&quot;,NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Type Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MQL_Date__c</fullName>
        <description>https://jira.avalara.com/browse/ITBSE-1024
https://jira.avalara.com/browse/BATS-748
https://wiki.avalara.com/pages/viewpage.action?pageId=292767863</description>
        <inlineHelpText>At the campaign member level, MQL Date is populated when a campaign member&apos;s Lead or Contact Status is set to MQL within 24 hours of campaign Initial Response Date.</inlineHelpText>
        <label>MQL Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Member_Email__c</fullName>
        <description>Purpose: For Eloqua to pull one field because the email field on the campaign member record is split on the back end into lead vs. contact so cannot automate outgoing emails.
Integrated: Yes, with eloqua
Owner: Marketing: Heather</description>
        <formula>if( NOT( ISBLANK( ContactId ) ), Contact.Email , Lead.Email )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Member Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Method_of_Contact__c</fullName>
        <description>Populated directly via Eloqua to stamp the associated Method with the current campaign attribution/affiliation so not lost on any subsequent changes to the lead record. 
Integrated. Populated via Eloqua
Owner: Susan Norgaard</description>
        <label>Method of Contact</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Chat</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Webform T1</fullName>
                </value>
                <value>
                    <fullName>Webform T2</fullName>
                </value>
                <value>
                    <fullName>In Person</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MyLodge_Id__c</fullName>
        <externalId>true</externalId>
        <label>MyLodge Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Existing_Lead__c</fullName>
        <description>Validates if the members first associated date = lead created date, recorded as NEW otherwise Existing
Integrated: No
Marketing: Jessica Davis sfhelp ticket  SFCOM-2436</description>
        <formula>If ( DateValue(CreatedDate) =  DateValue(Lead.CreatedDate) , &quot;New&quot;, &quot;Existing&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New/Existing Lead</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Existing_Leads_for_Rollup__c</fullName>
        <description>Stamped by workflow to use in rollup summary field to count all new Leads vs. existing</description>
        <label>New/Existing Leads for Rollup</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nomination_Status__c</fullName>
        <defaultValue>&quot;Added&quot;</defaultValue>
        <label>Nomination Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Open_Opportunities__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Workflow will stamp a checkbox when a campaign member is created and the related account has an open opportunity already.</description>
        <label>Open Opportunities</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PFLSwagIQ__Swag_Event_Value__c</fullName>
        <label>Swag Event Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_Property__c</fullName>
        <description>used to stamp the original  web property from the original lead to be sure the web property is correctly associated to the campaign attribution information.Will only be stamped with the campaign member record is newly created.
Integrated: Populated directly via Eloqua
Owner: Susan Norgaard</description>
        <label>Web Property</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>alternativemotorfuels.avalara.com</fullName>
                </value>
                <value>
                    <fullName>Avalara.com</fullName>
                </value>
                <value>
                    <fullName>avalara.com/europe</fullName>
                </value>
                <value>
                    <fullName>avalaramarketingcenter.com</fullName>
                </value>
                <value>
                    <fullName>certcapture.avalara.com</fullName>
                </value>
                <value>
                    <fullName>certcapture.com</fullName>
                </value>
                <value>
                    <fullName>certexpress.avalara.com</fullName>
                </value>
                <value>
                    <fullName>communications.avalara.com</fullName>
                </value>
                <value>
                    <fullName>communicationstaxrates.avalara.com</fullName>
                </value>
                <value>
                    <fullName>developer.avalara.com</fullName>
                </value>
                <value>
                    <fullName>exciserates.avalara.com</fullName>
                </value>
                <value>
                    <fullName>fatca.avalara.com</fullName>
                </value>
                <value>
                    <fullName>fuel.avalara.com</fullName>
                </value>
                <value>
                    <fullName>fuelinvoicing.avalara.com</fullName>
                </value>
                <value>
                    <fullName>info.avalara.com</fullName>
                </value>
                <value>
                    <fullName>landedcost.avalara.com</fullName>
                </value>
                <value>
                    <fullName>Mobileapp.avalara.com</fullName>
                </value>
                <value>
                    <fullName>mylodgetax.avalara.com</fullName>
                </value>
                <value>
                    <fullName>offers.avalara.com</fullName>
                </value>
                <value>
                    <fullName>partners.avalara.com</fullName>
                </value>
                <value>
                    <fullName>purechannelaps.com</fullName>
                </value>
                <value>
                    <fullName>rewards.avalara.com</fullName>
                </value>
                <value>
                    <fullName>salestax.avalara.com</fullName>
                </value>
                <value>
                    <fullName>TaxRates.com</fullName>
                </value>
                <value>
                    <fullName>TrustFile.com</fullName>
                </value>
                <value>
                    <fullName>TrustFileBharat.com</fullName>
                </value>
                <value>
                    <fullName>vatlive.com</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Working_Date__c</fullName>
        <description>https://jira.avalara.com/browse/BATS-748
https://jira.avalara.com/browse/ITBSE-1024</description>
        <label>Working Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>isPrimary__c</fullName>
        <defaultValue>false</defaultValue>
        <description>for mylodge</description>
        <label>isPrimary</label>
        <type>Checkbox</type>
    </fields>
    <sharingModel>ControlledByCampaign</sharingModel>
</CustomObject>